# Data_Analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  test_results.txt
.github/workflows/: ci.yml
Examples/: Runner.py
Manual_Analysis_Tools/: 1_Generic_Preprocessing.ipynb  2_Generic_DAQ_Preprocessing.ipynb  3_Generic_Data_Processing.ipynb  4_Generic_Image_Processing.ipynb  5.1_Apr_2024_241_Background.ipynb  5_Jan_2024_Background-Copy1.ipynb  6_Filter_Beams.ipynb  7_Generic_Moment_Calculation.ipynb  8_Generic_VCC_Analysis.ipynb
config/: example_analysis_parameters.yaml  example_datasets.yaml
src/General_Data_Analysis/: DAQ_Extract.py  Data_Classes.py  Data_Pipeline.py  Data_Pipeline_Functions.py  Image_Analysis.py  __init__.py
tests/smoke/: test_smoke.py
tests/unit/: test_DAQ.py  test_Data_Pipeline.py  test_Image_Analysis.py
